--- a/style.css
+++ b/style.css
@@ -289,3 +289,26 @@ html {
         padding: 10px 20px;
     }
 }
+
+
+.slideshow-container {
+    position: relative; /* Чтобы можно было позиционировать слайды абсолютно */
+    width: 440px; /* Задай нужную ширину */
+    height: 500px; /* Задай нужную высоту */
+    margin: 20px auto; /* Центрируем по горизонтали */
+    overflow: hidden; /* Чтобы слайды, выходящие за контейнер, не показывались */
+  }
+  
+  .slide {
+    position: absolute; /* Позиционируем каждый слайд абсолютно внутри контейнера */
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0; /* Изначально все слайды прозрачные */
+    transition: opacity 1s ease-in-out; /* Анимация смены прозрачности */
+  }
+  
+  .slide.active {
+    opacity: 1; /* Активный слайд полностью виден */
+  }
